@@ -1,3 +1,8 @@
+2008-11-27  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: Introduce support for StdParallel1 in 
+	Equirectangular (http://trac.osgeo.org/gdal/ticket/2706)
+
 2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/applygeo.c: New utility for applying georeferencing to an 
